--- a/account.html
+++ b/account.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VIP Account</title>
+<title>VIP Verification | Task Website</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <style>
 body{margin:0;font-family:'Poppins',sans-serif;background:#07102a;color:#fff;padding-bottom:70px;}
 header{background:#162447;color:#f0a500;padding:15px;text-align:center;font-size:22px;position:relative;}
-header .profile-icon{position:absolute;right:15px;top:15px;font-size:28px;cursor:pointer;color:#f59e0b;}
+header .profile-icon{position:absolute;right:15px;top:15px;font-size:26px;cursor:pointer;color:#f59e0b;}
 .container{max-width:800px;margin:20px auto;padding:0 16px;}
 .card{background:#0f1724;padding:16px;border-radius:12px;margin-bottom:16px;box-shadow:0 0 10px rgba(0,0,0,0.5);}
 .status{padding:6px 10px;border-radius:6px;display:inline-block;margin-top:5px;}
@@ -16,29 +16,55 @@ header .profile-icon{position:absolute;right:15px;top:15px;font-size:28px;cursor
 .unverified{background:#ef4444;color:#fff;}
 .pending{background:#f59e0b;color:#fff;}
 .verify-btn{background:#f59e0b;color:#000;padding:10px 16px;border:none;border-radius:8px;font-weight:600;cursor:pointer;margin-top:10px;}
+.verify-btn:hover{background:#fcd34d;}
 .bottom-nav{position:fixed;bottom:0;left:0;width:100%;background:#111827;display:flex;justify-content:space-around;border-top:1px solid rgba(255,255,255,0.1);padding:8px 0;z-index:1000;}
 .bottom-nav a{color:#ccc;text-decoration:none;font-size:13px;text-align:center;flex:1;display:flex;flex-direction:column;align-items:center;transition:0.3s;}
 .bottom-nav a i{font-size:20px;margin-bottom:3px;}
 .bottom-nav a.active,.bottom-nav a:hover{color:#f59e0b;}
+input,textarea{width:100%;padding:8px;margin-top:5px;border-radius:6px;border:none;background:#162447;color:#fff;}
+.submit-btn{background:#22c55e;color:#000;padding:10px 16px;border:none;border-radius:8px;font-weight:600;cursor:pointer;margin-top:10px;}
+.submit-btn:hover{background:#4ade80;}
 </style>
 </head>
 <body>
 
 <header>
-  VIP Account
+  VIP Account Verification
   <i class="fas fa-cog profile-icon" id="openSettings"></i>
 </header>
 
 <div class="container">
-  <div class="card">
-    <h4>Profile Info</h4>
-    <img id="pp" src="https://i.ibb.co/s1K9B7T/default.png" style="width:80px;height:80px;border-radius:50%;margin-bottom:8px;">
+  <div class="card" id="profileCard">
+    <h4>Profile Information</h4>
+    <center>
+      <img id="pp" src="https://i.ibb.co/s1K9B7T/default.png" style="width:90px;height:90px;border-radius:50%;margin-bottom:8px;border:2px solid #f59e0b;">
+    </center>
     <p><b>UID:</b> <span id="uid">Loading...</span></p>
+    <p><b>Name:</b> <span id="name">Loading...</span></p>
     <p><b>Email:</b> <span id="email">Loading...</span></p>
-    <p><b>Status:</b> <span id="status" class="status unverified">Unverified</span></p>
+    <p><b>Balance:</b> ৳<span id="balance">0</span></p>
     <p><b>Bio:</b> <span id="bioDisplay">Loading...</span></p>
-    <p><b>Password:</b> ********</p>
+    <p><b>Status:</b> <span id="status" class="status unverified">Unverified</span></p>
+    <p><b>Join Date:</b> <span id="joinDate">Loading...</span></p>
     <button id="verifyBtn" class="verify-btn"><i class="fa-solid fa-shield-halved"></i> Verify Now</button>
+  </div>
+
+  <!-- VIP Verification Form -->
+  <div class="card" id="verificationForm" style="display:none;">
+    <h4>Submit VIP Verification Request</h4>
+    <p>Send the following details for admin verification:</p>
+    <p><b>bKash/Nagad Number:</b> <span id="adminNumber">Loading...</span></p>
+    <input type="number" id="setMoney" placeholder="Set Money Amount (৳)">
+    <input type="text" id="txid" placeholder="TXID / Reference">
+    <input type="url" id="screenshot" placeholder="Screenshot URL">
+    <textarea id="note" placeholder="Optional note"></textarea>
+    <button class="submit-btn" id="submitVerification">Submit VIP Request</button>
+  </div>
+
+  <!-- Request History -->
+  <div class="card" id="requestHistoryCard">
+    <h4>Verification Request History</h4>
+    <div id="requestHistory">No requests yet.</div>
   </div>
 </div>
 
@@ -51,65 +77,114 @@ header .profile-icon{position:absolute;right:15px;top:15px;font-size:28px;cursor
 </div>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
-import { getDatabase, ref, get, update } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-database.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getDatabase, ref, onValue, set } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
 const firebaseConfig = { 
   apiKey: "AIzaSyApIiGovH14024loNQMVTsm_qE3H2Fa658", 
   authDomain: "eshopingbddd.firebaseapp.com", 
   databaseURL: "https://eshopingbddd-default-rtdb.firebaseio.com", 
   projectId: "eshopingbddd", 
-  storageBucket: "eshopingbddd.firebasestorage.app", 
+  storageBucket: "eshopingbddd.appspot.com", 
   messagingSenderId: "19777305233", 
   appId: "1:19777305233:web:33f3871db06beeaf129d30" 
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
-const uid = localStorage.getItem('uid');
-if(!uid){window.location='login.html';}
 
-const userRef = ref(db,'users/'+uid);
+const uid = localStorage.getItem("uid");
+if (!uid) window.location.href = "login.html";
 
-async function loadUser(){
-  const snap = await get(userRef);
-  if(snap.exists()){
-    const d = snap.val();
-    document.getElementById('uid').textContent = uid;
-    document.getElementById('email').textContent = d.email || '';
-    document.getElementById('pp').src = d.profilePic || 'https://i.ibb.co/s1K9B7T/default.png';
-    document.getElementById('bioDisplay').textContent = d.bio || '';
-    
-    const statusEl = document.getElementById('status');
-    const verifyBtn = document.getElementById('verifyBtn');
-
-    if(d.status === 'verified'){
-      statusEl.textContent = 'Verified';
-      statusEl.className = 'status verified';
-      verifyBtn.style.display = 'none';
-    } 
-    else if(d.status === 'pending'){
-      statusEl.textContent = 'Pending';
-      statusEl.className = 'status pending';
-      verifyBtn.textContent = 'Verification Pending...';
-      verifyBtn.disabled = true;
-    }
-    else {
-      statusEl.textContent = 'Unverified';
-      statusEl.className = 'status unverified';
-    }
+// Load user info
+const userRef = ref(db, "users/" + uid);
+onValue(userRef, snapshot => {
+  if (!snapshot.exists()) { 
+    alert("User not found!"); 
+    localStorage.removeItem("uid"); 
+    window.location.href = "login.html"; 
+    return; 
   }
-}
-loadUser();
+  const d = snapshot.val();
+  document.getElementById("uid").textContent = uid;
+  document.getElementById("name").textContent = d.name || "No Name";
+  document.getElementById("email").textContent = d.email || "N/A";
+  document.getElementById("balance").textContent = d.balance || 0;
+  document.getElementById("bioDisplay").textContent = d.bio || "No bio set";
+  document.getElementById("pp").src = d.profilePic || "https://i.ibb.co/s1K9B7T/default.png";
+  document.getElementById("joinDate").textContent = d.joinDate || "Not available";
 
-// Verify button
-document.getElementById('verifyBtn').addEventListener('click', ()=>{
-  update(userRef, { status:'pending' });
-  window.location = 'verified.html';
+  const statusEl = document.getElementById("status");
+  const verifyBtn = document.getElementById("verifyBtn");
+
+  if (d.status === "verified" || d.verified === true) {
+    statusEl.textContent = "Verified"; statusEl.className = "status verified"; verifyBtn.style.display="none";
+  } else if (d.status === "pending") {
+    statusEl.textContent = "Pending"; statusEl.className = "status pending"; verifyBtn.style.display="none";
+  } else {
+    statusEl.textContent = "Unverified"; statusEl.className = "status unverified"; verifyBtn.style.display="inline-block";
+  }
 });
 
-document.getElementById('openSettings').addEventListener('click',()=>{
-  window.location.href = 'setting.html';
+// Load admin payment info
+const adminRef = ref(db, "admin/payment");
+onValue(adminRef, snapshot => {
+  const d = snapshot.val();
+  if(d) document.getElementById("adminNumber").textContent = `bKash: ${d.bkash} | Nagad: ${d.nagad}`;
+});
+
+// Show verification form
+document.getElementById("verifyBtn").addEventListener("click", () => {
+  document.getElementById("verificationForm").style.display = "block";
+});
+
+// Submit verification request
+document.getElementById("submitVerification").addEventListener("click", () => {
+  const setMoney = document.getElementById("setMoney").value.trim();
+  const txid = document.getElementById("txid").value.trim();
+  const screenshot = document.getElementById("screenshot").value.trim();
+  const note = document.getElementById("note").value.trim();
+  
+  if(!setMoney || !txid || !screenshot){ 
+    alert("Set Money, TXID, এবং Screenshot সব পূরণ করা প্রয়োজন।"); 
+    return; 
+  }
+
+  const requestRef = ref(db, "verificationRequests/" + uid);
+  set(requestRef, {
+    uid,
+    setMoney,
+    txid,
+    screenshot,
+    note,
+    status: "pending",
+    timestamp: Date.now()
+  }).then(()=>{
+    alert("VIP Verification request submitted!");
+    document.getElementById("verificationForm").style.display="none";
+    document.getElementById("status").textContent="Pending";
+    document.getElementById("status").className="status pending";
+  });
+});
+
+// Load request history
+const historyRef = ref(db, "verificationRequests/" + uid);
+onValue(historyRef, snapshot => {
+  const data = snapshot.val();
+  const historyEl = document.getElementById("requestHistory");
+  if(!data){ historyEl.textContent="No requests yet."; return; }
+  historyEl.innerHTML = `
+    <p><b>Set Money:</b> ৳${data.setMoney}</p>
+    <p><b>TXID:</b> ${data.txid}</p>
+    <p><b>Screenshot:</b> <a href="${data.screenshot}" target="_blank">View</a></p>
+    <p><b>Note:</b> ${data.note || "N/A"}</p>
+    <p><b>Status:</b> <span class="${data.status==='verified'?'verified':data.status==='pending'?'pending':'unverified'}">${data.status}</span></p>
+  `;
+});
+
+// Settings redirect
+document.getElementById("openSettings").addEventListener("click", () => {
+  window.location.href = "setting.html";
 });
 </script>
 </body>
