--- a/verifieda.html
+++ b/verifieda.html
@@ -2,120 +2,104 @@
 <html lang="bn">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Profile Verified</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Admin Panel | Verification Requests</title>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
-
-body{
-  font-family:'Poppins',sans-serif;
-  background:linear-gradient(135deg,#0a1128,#001f54);
-  color:#fff;
-  text-align:center;
-  min-height:100vh;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  flex-direction:column;
-  padding:20px;
-}
-
-.card{
-  background:#0f1a3a;
-  padding:30px;
-  border-radius:15px;
-  box-shadow:0 0 15px rgba(0,0,0,0.4);
-  max-width:400px;
-  width:100%;
-}
-
-h2{color:#4ade80;font-size:26px;margin-bottom:10px;}
-p{color:#d1d5db;}
-
-.status{
-  margin-top:15px;
-  padding:10px 20px;
-  border-radius:30px;
-  display:inline-block;
-  font-weight:600;
-}
-
-.status-verified{
-  background:linear-gradient(90deg,#00ff88,#00c3ff);
-  color:#000;
-  box-shadow:0 0 10px rgba(0,255,136,0.6);
-  animation:glow 1.5s infinite alternate;
-}
-
-@keyframes glow{
-  from{box-shadow:0 0 10px rgba(0,255,136,0.4);}
-  to{box-shadow:0 0 20px rgba(0,255,136,0.9);}
-}
-
-a{
-  display:inline-block;
-  margin-top:20px;
-  background:#2563eb;
-  color:#fff;
-  padding:10px 25px;
-  border-radius:25px;
-  text-decoration:none;
-  transition:0.3s;
-}
-a:hover{background:#1d4ed8;}
+body{margin:0;font-family:'Poppins',sans-serif;background:#07102a;color:#fff;padding:20px;}
+h2{text-align:center;color:#f0a500;}
+.card{background:#0f1724;padding:16px;border-radius:12px;margin-bottom:16px;box-shadow:0 0 10px rgba(0,0,0,0.5);}
+button{padding:8px 12px;border:none;border-radius:6px;font-weight:600;cursor:pointer;margin-right:6px;}
+.approve{background:#22c55e;color:#000;}
+.approve:hover{background:#4ade80;}
+.reject{background:#ef4444;color:#fff;}
+.reject:hover{background:#f87171;}
+table{width:100%;border-collapse:collapse;}
+th,td{padding:8px;border-bottom:1px solid #333;text-align:left;}
+th{color:#f59e0b;}
 </style>
 </head>
 <body>
 
+<h2>Verification Requests</h2>
 <div class="card">
-  <h2 id="username">লোড হচ্ছে...</h2>
-  <p id="bio">আপনার তথ্য লোড হচ্ছে...</p>
-  <div id="statusBox"></div>
-  <a href="dashboard.html">ড্যাশবোর্ডে ফিরে যান</a>
+  <table>
+    <thead>
+      <tr>
+        <th>UID</th>
+        <th>TXID / Note</th>
+        <th>Status</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody id="requestTable">
+      <tr><td colspan="4" style="text-align:center;">Loading...</td></tr>
+    </tbody>
+  </table>
 </div>
 
 <script type="module">
-// Firebase Import
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-app.js";
-import { getDatabase, ref, get } from "https://www.gstatic.com/firebasejs/10.3.0/firebase-database.js";
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { getDatabase, ref, get, onValue, update } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-database.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyApIiGovH14024loNQMVTsm_qE3H2Fa658",
-  authDomain: "eshopingbddd.firebaseapp.com",
-  databaseURL: "https://eshopingbddd-default-rtdb.firebaseio.com",
-  projectId: "eshopingbddd",
-  storageBucket: "eshopingbddd.firebasestorage.app",
-  messagingSenderId: "19777305233",
-  appId: "1:19777305233:web:33f3871db06beeaf129d30"
+const firebaseConfig = { 
+  apiKey: "AIzaSyApIiGovH14024loNQMVTsm_qE3H2Fa658", 
+  authDomain: "eshopingbddd.firebaseapp.com", 
+  databaseURL: "https://eshopingbddd-default-rtdb.firebaseio.com", 
+  projectId: "eshopingbddd", 
+  storageBucket: "eshopingbddd.appspot.com", 
+  messagingSenderId: "19777305233", 
+  appId: "1:19777305233:web:33f3871db06beeaf129d30" 
 };
 
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-// Current user
-const uid = localStorage.getItem('uid');
-const userRef = ref(db, 'users/' + uid);
+const tableBody = document.getElementById("requestTable");
 
-get(userRef).then(snap=>{
-  if(!snap.exists()){
-    document.getElementById('username').innerText = "User not found!";
+// Load all verification requests
+const requestsRef = ref(db, "verificationRequests");
+onValue(requestsRef, snapshot => {
+  const data = snapshot.val();
+  tableBody.innerHTML = "";
+  if(!data){
+    tableBody.innerHTML = '<tr><td colspan="4" style="text-align:center;">No requests yet.</td></tr>';
     return;
   }
 
-  const data = snap.val();
-  document.getElementById('username').innerText = data.name || 'No Name';
-  document.getElementById('bio').innerText = data.bio || 'কোনো বায়ো দেওয়া হয়নি';
+  Object.keys(data).forEach(uid => {
+    const req = data[uid];
+    const row = document.createElement("tr");
 
-  const statusBox = document.getElementById('statusBox');
+    row.innerHTML = `
+      <td>${uid}</td>
+      <td>TXID: ${req.txid}<br>Note: ${req.note || "N/A"}</td>
+      <td><span style="color:${req.status==='verified'?'#22c55e':req.status==='pending'?'#f59e0b':'#ef4444'}">${req.status}</span></td>
+      <td>
+        <button class="approve" data-uid="${uid}">Approve</button>
+        <button class="reject" data-uid="${uid}">Reject</button>
+      </td>
+    `;
+    tableBody.appendChild(row);
+  });
 
-  // Admin ID check
-  if(uid === "r4EiKZl9vJeeLfIuxEDsvBfvLDj2" || data.verified === true){
-    statusBox.innerHTML = `<div class="status status-verified">✅ Verified Account</div>`;
-  } else {
-    statusBox.innerHTML = `<div class="status" style="background:#ef4444;">⛔ Unverified Account</div>`;
-  }
+  // Add click events
+  document.querySelectorAll(".approve").forEach(btn => {
+    btn.addEventListener("click", e => {
+      const uid = e.target.dataset.uid;
+      update(ref(db, "verificationRequests/" + uid), { status: "verified" });
+      update(ref(db, "users/" + uid), { status: "verified", verified: true });
+    });
+  });
+
+  document.querySelectorAll(".reject").forEach(btn => {
+    btn.addEventListener("click", e => {
+      const uid = e.target.dataset.uid;
+      update(ref(db, "verificationRequests/" + uid), { status: "rejected" });
+      update(ref(db, "users/" + uid), { status: "unverified", verified: false });
+    });
+  });
 });
 </script>
-
 </body>
 </html>
