--- a/admindashboard .html
+++ b/admindashboard .html
@@ -9,95 +9,117 @@
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
     *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
     body{
-      background:linear-gradient(135deg,#0f172a,#1e293b,#0f172a);
+      background: radial-gradient(circle at top left,#0a0a23,#11163a);
       color:#fff;
       min-height:100vh;
+    }
+
+    header{
+      text-align:center;
+      background:rgba(255,255,255,0.05);
+      backdrop-filter:blur(10px);
+      padding:18px;
+      font-size:24px;
+      font-weight:600;
+      color:#f0a500;
+      box-shadow:0 3px 12px rgba(0,0,0,0.5);
+      border-bottom:2px solid #f0a50033;
+    }
+
+    .login-box{
+      width:330px;
+      background:rgba(255,255,255,0.08);
+      backdrop-filter:blur(10px);
+      padding:25px;
+      border-radius:16px;
+      box-shadow:0 0 15px rgba(0,0,0,0.6);
+      position:absolute;
+      top:50%;left:50%;
+      transform:translate(-50%,-50%);
+      text-align:center;
+    }
+    .login-box h2{color:#f0a500;margin-bottom:20px;}
+    .login-box input{
+      width:100%;padding:10px;margin:10px 0;
+      border:none;border-radius:8px;
+      background:rgba(255,255,255,0.1);
+      color:#fff;
+      outline:none;
+    }
+    .login-box button{
+      width:100%;
+      background:#f0a500;color:#000;
+      font-weight:bold;border:none;
+      border-radius:8px;padding:10px;
+      cursor:pointer;
+      transition:0.3s;
+    }
+    .login-box button:hover{
+      background:#ffce45;
+    }
+
+    .dashboard{
+      padding:25px;
+      text-align:center;
+      animation:fadeIn 0.6s ease-in;
+    }
+    @keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+
+    .stats{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
+      gap:18px;
+      margin-top:25px;
+    }
+
+    .card{
+      background:rgba(255,255,255,0.08);
+      backdrop-filter:blur(15px);
+      border-radius:15px;
+      padding:20px;
+      box-shadow:0 0 12px rgba(0,0,0,0.5);
+      transition:0.3s;
+    }
+    .card:hover{transform:translateY(-5px);box-shadow:0 0 20px rgba(240,165,0,0.3);}
+    .card i{font-size:32px;color:#f0a500;margin-bottom:10px;}
+    .card h3{font-size:16px;margin-bottom:5px;}
+    .card p{font-size:20px;font-weight:600;color:#fff;}
+
+    .menu{
+      margin-top:35px;
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(160px,1fr));
+      gap:15px;
+    }
+    .menu a{
+      background:rgba(255,255,255,0.08);
+      backdrop-filter:blur(10px);
+      color:#fff;
+      text-decoration:none;
+      padding:20px;
+      border-radius:15px;
       display:flex;
       flex-direction:column;
       align-items:center;
       justify-content:center;
-      padding:20px;
+      box-shadow:0 0 12px rgba(0,0,0,0.4);
+      transition:0.3s;
     }
-    .login-box,.dashboard{
-      background:rgba(30,41,59,0.95);
-      padding:25px 30px;
-      border-radius:20px;
-      box-shadow:0 0 25px rgba(0,255,255,0.1);
-      width:90%;
-      max-width:450px;
-      text-align:center;
-      backdrop-filter:blur(8px);
-    }
-    .login-box input{
-      width:100%;
-      padding:12px;
-      margin:8px 0;
+    .menu a:hover{background:rgba(240,165,0,0.15);transform:translateY(-3px);}
+    .menu a img{width:40px;height:40px;margin-bottom:8px;}
+    .menu a span{font-weight:600;font-size:14px;}
+
+    .logout-btn{
+      background:#f44336;
+      color:#fff;
       border:none;
       border-radius:10px;
-      background:#334155;
-      color:#fff;
-      font-size:15px;
-    }
-    .login-box button{
-      width:100%;
-      padding:12px;
+      padding:10px;
+      font-size:14px;
       margin-top:10px;
-      background:#10b981;
-      border:none;
-      border-radius:10px;
-      font-weight:600;
       cursor:pointer;
-      color:#fff;
-      font-size:16px;
-      transition:0.3s;
     }
-    .login-box button:hover{background:#059669;transform:scale(1.02);}
-    .dashboard h2{margin-bottom:15px;font-size:24px;color:#38bdf8;text-shadow:0 0 8px #38bdf8;}
-    .stats{
-      display:grid;
-      grid-template-columns:repeat(2,1fr);
-      gap:15px;
-      margin-top:15px;
-    }
-    .card{
-      background:#1e293b;
-      padding:18px;
-      border-radius:15px;
-      text-align:center;
-      transition:0.3s;
-      box-shadow:0 0 10px rgba(56,189,248,0.2);
-    }
-    .card:hover{transform:scale(1.05);}
-    .card i{
-      font-size:25px;
-      color:#22d3ee;
-      margin-bottom:8px;
-    }
-    .card h3{font-size:15px;color:#cbd5e1;margin-bottom:6px;}
-    .card p{font-size:20px;font-weight:700;color:#22d3ee;}
-    .menu{
-      margin-top:25px;
-      display:grid;
-      gap:10px;
-    }
-    .menu a{
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      background:#10b981;
-      color:#fff;
-      padding:12px;
-      border-radius:12px;
-      text-decoration:none;
-      font-weight:600;
-      font-size:15px;
-      transition:0.3s;
-      box-shadow:0 0 8px rgba(16,185,129,0.3);
-    }
-    .menu a i{margin-right:8px;font-size:18px;}
-    .menu a:hover{background:#059669;transform:scale(1.03);}
-    .logout-btn{background:#ef4444 !important;}
-    .logout-btn:hover{background:#dc2626 !important;}
+    .logout-btn:hover{background:#e53935;}
   </style>
 </head>
 <body>
@@ -110,45 +132,34 @@
   </div>
 
   <div class="dashboard" id="dashboard" style="display:none;">
-    <h2><i class="fa-solid fa-user-shield"></i> Admin Dashboard</h2>
+    <header>VIP Admin Panel</header>
+
+    <h2 style="color:#f0a500;margin-top:15px;">Dashboard Overview</h2>
 
     <div class="stats">
-      <div class="card">
-        <i class="fa-solid fa-users"></i>
-        <h3>Total Users</h3>
-        <p id="totalUsers">0</p>
-      </div>
-      <div class="card">
-        <i class="fa-solid fa-user-check"></i>
-        <h3>Verified Users</h3>
-        <p id="verifiedUsers">0</p>
-      </div>
-      <div class="card">
-        <i class="fa-solid fa-user-clock"></i>
-        <h3>Verify Requests</h3>
-        <p id="verifyRequests">0</p>
-      </div>
-      <div class="card">
-        <i class="fa-solid fa-sack-dollar"></i>
-        <h3>Total Withdraw</h3>
-        <p id="withdrawAmount">৳0</p>
-      </div>
+      <div class="card"><i class="fa-solid fa-users"></i><h3>Total Users</h3><p id="totalUsers">0</p></div>
+      <div class="card"><i class="fa-solid fa-user-check"></i><h3>Verified Users</h3><p id="verifiedUsers">0</p></div>
+      <div class="card"><i class="fa-solid fa-user-clock"></i><h3>Verify Requests</h3><p id="verifyRequests">0</p></div>
+      <div class="card"><i class="fa-solid fa-sack-dollar"></i><h3>Total Withdraw</h3><p id="withdrawAmount">৳0</p></div>
     </div>
 
     <div class="menu">
-      <a href="withdrawrequest.html"><i class="fa-solid fa-money-bill-transfer"></i> Withdraw Requests</a>
-      <a href="withdrawdetailsset.html"><i class="fa-solid fa-clipboard-list"></i> Withdraw Details Set</a>
-      <a href="verifieduser.html"><i class="fa-solid fa-user-check"></i> Verified Users</a>
-      <a href="unverified.html"><i class="fa-solid fa-user-xmark"></i> Unverified Users</a>
-      <a href="verifiedrequest.html"><i class="fa-solid fa-user-clock"></i> Verify Requests</a>
-      <a href="#" class="logout-btn" onclick="logout()"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
+    	<a href="taskrequest.html.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>Task request</span></a>
+    <a href="taskad.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>Task add</span></a>
+    <a href="offer.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>Offer set</span></a>
+      <a href="withdrawrequest.html"><img src="https://cdn-icons-png.flaticon.com/512/2331/2331970.png"><span>Withdraw Requests</span></a>
+      <a href="withdrawrequestset.html"><img src="https://cdn-icons-png.flaticon.com/512/1792/1792835.png"><span>Withdraw Set</span></a>
+      <a href="verifieduser.html"><img src="https://cdn-icons-png.flaticon.com/512/1077/1077012.png"><span>Verified Users</span></a>
+      <a href="unverified.html"><img src="https://cdn-icons-png.flaticon.com/512/3917/3917035.png"><span>Unverified Users</span></a>
+      <a href="verifieda.html"><img src="https://cdn-icons-png.flaticon.com/512/4257/4257483.png"><span>Verify Requests</span></a>
+      <a href="registeruser.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>User List</span></a>
+      <a href="#" onclick="logout()"><img src="https://cdn-icons-png.flaticon.com/512/1828/1828490.png"><span>Logout</span></a>
     </div>
   </div>
 
   <script type="module">
-    // Firebase setup
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
-    import { getDatabase, ref, get, child } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+    import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyApIiGovH14024loNQMVTsm_qE3H2Fa658",
@@ -159,6 +170,7 @@
       messagingSenderId: "770272986116",
       appId: "1:770272986116:web:cf8b246c5b1f002bd8a1aa"
     };
+
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
 
@@ -175,25 +187,26 @@
       }
     }
 
-    async function loadStats(){
-      const dbRef = ref(db);
-      const snapshot = await get(child(dbRef, "users"));
-      if(snapshot.exists()){
-        let users = snapshot.val();
-        let total = Object.keys(users).length;
-        let verified = 0;
-        let requests = 0;
-        let totalWithdraw = 0;
-        for(let id in users){
-          if(users[id].verified === true) verified++;
-          if(users[id].verifyRequest === true) requests++;
-          if(users[id].withdrawAmount) totalWithdraw += parseFloat(users[id].withdrawAmount);
+    function loadStats(){
+      const usersRef = ref(db, "users");
+      onValue(usersRef, (snapshot) => {
+        if(snapshot.exists()){
+          let users = snapshot.val();
+          let total = Object.keys(users).length;
+          let verified = 0;
+          let requests = 0;
+          let totalWithdraw = 0;
+          for(let id in users){
+            if(users[id].verified) verified++;
+            if(users[id].verifyRequest) requests++;
+            if(users[id].withdrawAmount) totalWithdraw += parseFloat(users[id].withdrawAmount);
+          }
+          document.getElementById("totalUsers").innerText = total;
+          document.getElementById("verifiedUsers").innerText = verified;
+          document.getElementById("verifyRequests").innerText = requests;
+          document.getElementById("withdrawAmount").innerText = "৳" + totalWithdraw.toFixed(2);
         }
-        document.getElementById("totalUsers").innerText = total;
-        document.getElementById("verifiedUsers").innerText = verified;
-        document.getElementById("verifyRequests").innerText = requests;
-        document.getElementById("withdrawAmount").innerText = "৳" + totalWithdraw;
-      }
+      });
     }
 
     function logout(){
