--- a/admin.html
+++ b/admin.html
@@ -1,33 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="bn">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard | VIP Task</title>
+  <title>VIP Admin Panel | Verified</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
     *{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
     body{
-      background: radial-gradient(circle at top left,#0a0a23,#11163a);
+      background: radial-gradient(circle at top left,#050819,#0d1333);
       color:#fff;
       min-height:100vh;
+      overflow-x:hidden;
     }
 
     header{
-      text-align:center;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      gap:10px;
+      padding:15px;
       background:rgba(255,255,255,0.05);
-      backdrop-filter:blur(10px);
-      padding:18px;
-      font-size:24px;
-      font-weight:600;
-      color:#f0a500;
-      box-shadow:0 3px 12px rgba(0,0,0,0.5);
       border-bottom:2px solid #f0a50033;
+      box-shadow:0 3px 10px rgba(0,0,0,0.4);
     }
+    header img{width:40px;height:40px;border-radius:50%;}
+    header h1{font-size:22px;color:#f0a500;font-weight:600;}
 
     .login-box{
-      width:330px;
+      width:340px;
       background:rgba(255,255,255,0.08);
       backdrop-filter:blur(10px);
       padding:25px;
@@ -37,52 +39,43 @@
       top:50%;left:50%;
       transform:translate(-50%,-50%);
       text-align:center;
+      animation:fadeIn 0.5s ease-in;
     }
+    @keyframes fadeIn{from{opacity:0;transform:translate(-50%,-60%);}to{opacity:1;transform:translate(-50%,-50%);}}
     .login-box h2{color:#f0a500;margin-bottom:20px;}
     .login-box input{
-      width:100%;padding:10px;margin:10px 0;
-      border:none;border-radius:8px;
-      background:rgba(255,255,255,0.1);
-      color:#fff;
-      outline:none;
+      width:100%;padding:12px;margin:10px 0;
+      border:none;border-radius:10px;
+      background:rgba(255,255,255,0.12);
+      color:#fff;outline:none;
+      font-size:14px;
     }
     .login-box button{
       width:100%;
-      background:#f0a500;color:#000;
-      font-weight:bold;border:none;
-      border-radius:8px;padding:10px;
-      cursor:pointer;
-      transition:0.3s;
+      background:#f0a500;
+      color:#000;font-weight:bold;
+      border:none;border-radius:10px;
+      padding:12px;font-size:15px;
+      cursor:pointer;transition:0.3s;
     }
-    .login-box button:hover{
-      background:#ffce45;
-    }
+    .login-box button:hover{background:#ffcb45;}
 
-    .dashboard{
-      padding:25px;
-      text-align:center;
-      animation:fadeIn 0.6s ease-in;
-    }
-    @keyframes fadeIn{from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
-
+    .dashboard{padding:25px;display:none;text-align:center;}
     .stats{
       display:grid;
       grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
-      gap:18px;
-      margin-top:25px;
+      gap:18px;margin-top:25px;
     }
-
     .card{
       background:rgba(255,255,255,0.08);
       backdrop-filter:blur(15px);
-      border-radius:15px;
-      padding:20px;
+      border-radius:15px;padding:20px;
       box-shadow:0 0 12px rgba(0,0,0,0.5);
       transition:0.3s;
     }
     .card:hover{transform:translateY(-5px);box-shadow:0 0 20px rgba(240,165,0,0.3);}
     .card i{font-size:32px;color:#f0a500;margin-bottom:10px;}
-    .card h3{font-size:16px;margin-bottom:5px;}
+    .card h3{font-size:15px;margin-bottom:5px;}
     .card p{font-size:20px;font-weight:600;color:#fff;}
 
     .menu{
@@ -94,14 +87,10 @@
     .menu a{
       background:rgba(255,255,255,0.08);
       backdrop-filter:blur(10px);
-      color:#fff;
-      text-decoration:none;
-      padding:20px;
-      border-radius:15px;
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      justify-content:center;
+      color:#fff;text-decoration:none;
+      padding:20px;border-radius:15px;
+      display:flex;flex-direction:column;
+      align-items:center;justify-content:center;
       box-shadow:0 0 12px rgba(0,0,0,0.4);
       transition:0.3s;
     }
@@ -111,18 +100,20 @@
 
     .logout-btn{
       background:#f44336;
-      color:#fff;
-      border:none;
-      border-radius:10px;
-      padding:10px;
-      font-size:14px;
-      margin-top:10px;
+      color:#fff;border:none;
+      border-radius:10px;padding:10px;
+      font-size:14px;margin-top:10px;
       cursor:pointer;
     }
     .logout-btn:hover{background:#e53935;}
   </style>
 </head>
 <body>
+
+  <header>
+    <img src="https://i.ibb.co/t3m0G7M/vip-logo.png" alt="VIP Logo">
+    <h1>VIP Admin Panel</h1>
+  </header>
 
   <div class="login-box" id="loginBox">
     <h2>Admin Login</h2>
@@ -131,10 +122,8 @@
     <button onclick="adminLogin()">Login</button>
   </div>
 
-  <div class="dashboard" id="dashboard" style="display:none;">
-    <header>VIP Admin Panel</header>
-
-    <h2 style="color:#f0a500;margin-top:15px;">Dashboard Overview</h2>
+  <div class="dashboard" id="dashboard">
+    <h2 style="color:#f0a500;">Dashboard Overview</h2>
 
     <div class="stats">
       <div class="card"><i class="fa-solid fa-users"></i><h3>Total Users</h3><p id="totalUsers">0</p></div>
@@ -144,22 +133,25 @@
     </div>
 
     <div class="menu">
-    	<a href="taskrequest.html.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>Task request</span></a>
-    <a href="taskad.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>Task add</span></a>
-    <a href="offer.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>Offer set</span></a>
+      <a href="taskrequest.html"><img src="https://cdn-icons-png.flaticon.com/512/2211/2211008.png"><span>Task Request</span></a>
+      <a href="taskad.html"><img src="https://cdn-icons-png.flaticon.com/512/1055/1055646.png"><span>Add Task</span></a>
+      <a href="offer.html"><img src="https://cdn-icons-png.flaticon.com/512/3076/3076016.png"><span>Offer Set</span></a>
+      <a href="bonus.html"><img src="https://cdn-icons-png.flaticon.com/512/1077/1077012.png"><span>Referral Bonus</span></a>
       <a href="withdrawrequest.html"><img src="https://cdn-icons-png.flaticon.com/512/2331/2331970.png"><span>Withdraw Requests</span></a>
       <a href="withdrawrequestset.html"><img src="https://cdn-icons-png.flaticon.com/512/1792/1792835.png"><span>Withdraw Set</span></a>
-      <a href="verifieduser.html"><img src="https://cdn-icons-png.flaticon.com/512/1077/1077012.png"><span>Verified Users</span></a>
-      <a href="unverified.html"><img src="https://cdn-icons-png.flaticon.com/512/3917/3917035.png"><span>Unverified Users</span></a>
-      <a href="verifieda.html"><img src="https://cdn-icons-png.flaticon.com/512/4257/4257483.png"><span>Verify Requests</span></a>
-      <a href="registeruser.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>User List</span></a>
+      <a href="verifieduser.html"><img src="https://cdn-icons-png.flaticon.com/512/4257/4257483.png"><span>Verified Users</span></a>
+      <a href="unverified.html"><img src="https://cdn-icons-png.flaticon.com/512/3917/3917035.png"><span>Unverified</span></a>
+      <a href="registeruser.html"><img src="https://cdn-icons-png.flaticon.com/512/3177/3177440.png"><span>All Users</span></a>
       <a href="#" onclick="logout()"><img src="https://cdn-icons-png.flaticon.com/512/1828/1828490.png"><span>Logout</span></a>
     </div>
+
+    <button class="logout-btn" onclick="logout()">Logout</button>
   </div>
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyApIiGovH14024loNQMVTsm_qE3H2Fa658",
@@ -173,29 +165,28 @@
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
+    const auth = getAuth(app);
 
-    function adminLogin(){
-      const email=document.getElementById("adminEmail").value.trim();
-      const pass=document.getElementById("adminPass").value.trim();
-      if(email==="siam@gmail.com" && pass==="siam321"){
+    window.adminLogin = function(){
+      const email = document.getElementById("adminEmail").value.trim();
+      const pass = document.getElementById("adminPass").value.trim();
+      signInWithEmailAndPassword(auth, email, pass)
+      .then(() => {
         localStorage.setItem("admin","loggedin");
         document.getElementById("loginBox").style.display="none";
         document.getElementById("dashboard").style.display="block";
         loadStats();
-      }else{
-        alert("Invalid credentials!");
-      }
+      })
+      .catch(() => alert("❌ Invalid admin credentials!"));
     }
 
     function loadStats(){
       const usersRef = ref(db, "users");
-      onValue(usersRef, (snapshot) => {
+      onValue(usersRef, (snapshot)=>{
         if(snapshot.exists()){
           let users = snapshot.val();
           let total = Object.keys(users).length;
-          let verified = 0;
-          let requests = 0;
-          let totalWithdraw = 0;
+          let verified = 0, requests = 0, totalWithdraw = 0;
           for(let id in users){
             if(users[id].verified) verified++;
             if(users[id].verifyRequest) requests++;
@@ -209,12 +200,12 @@
       });
     }
 
-    function logout(){
+    window.logout = function(){
       localStorage.removeItem("admin");
       location.reload();
     }
 
-    window.onload=()=>{
+    window.onload = ()=>{
       if(localStorage.getItem("admin")==="loggedin"){
         document.getElementById("loginBox").style.display="none";
         document.getElementById("dashboard").style.display="block";
@@ -223,5 +214,4 @@
     }
   </script>
 </body>
-
 </html>
